optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_extract_single_qrl_with_nested_components.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal, Signal } from '@qwik.dev/core';
const Foo = component$(() => {
  const data = useSignal<Signal<any>[]>([]);
  const Inner = component$((props) => {
    const data = props.data
    return <div>{data.value.map(item => <p onClick$={() => console.log(item.value.id)}>{item.value.id}</p>)}</div>
  })
  return <Inner data={data} />
})

============================= ./should_extract_single_qrl_with_nested_components.tsx_Foo_component_Inner_component_w18tmCTFVVo.js (ENTRY POINT)==

import{_jsxSorted,qrl}from"@qwik.dev/core";export const Foo_component_Inner_component_w18tmCTFVVo=props=>{let[data]=useLexicalScope(),data=props.data;return/* @__PURE__ */ _jsxSorted(`div`,null,null,data.value.map(item=>/* @__PURE__ */ _jsxSorted(`p`,{on:click:qrl(()=>import(`./should_extract_single_qrl_with_nested_components.tsx.js`),`Foo_component_Inner_component_div_map_p_onClick`,[item])},null,item.value.id,1,null)),1,null)};

None
/*
{
  "origin": "should_extract_single_qrl_with_nested_components.tsx",
  "name": "Foo_component_Inner_component_w18tmCTFVVo",
  "entry": null,
  "displayName": "should_extract_single_qrl_with_nested_components.tsx_Foo_component_Inner_component",
  "hash": "w18tmCTFVVo",
  "canonicalFilename": "should_extract_single_qrl_with_nested_components.tsx_Foo_component_Inner_component_w18tmCTFVVo",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Foo_component_Inner_component_w18tmCTFVVo",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= ./should_extract_single_qrl_with_nested_components.tsx_Foo_component_vNuTEmVFTXE.js (ENTRY POINT)==

import{_jsxSorted,componentQrl,qrl,useSignal}from"@qwik.dev/core";export const Foo_component_vNuTEmVFTXE=()=>{let data=useSignal([]);return _jsxSorted(componentQrl(qrl(()=>import(`./should_extract_single_qrl_with_nested_components.tsx_Foo_component_Inner_component_w18tmCTFVVo.js`),`Foo_component_Inner_component_w18tmCTFVVo`,[data])),null,{data},null,3,null)};

None
/*
{
  "origin": "should_extract_single_qrl_with_nested_components.tsx",
  "name": "Foo_component_vNuTEmVFTXE",
  "entry": null,
  "displayName": "should_extract_single_qrl_with_nested_components.tsx_Foo_component",
  "hash": "vNuTEmVFTXE",
  "canonicalFilename": "should_extract_single_qrl_with_nested_components.tsx_Foo_component_vNuTEmVFTXE",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Foo_component_vNuTEmVFTXE",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= should_extract_single_qrl_with_nested_components.tsx ==

import{componentQrl,qrl}from"@qwik.dev/core";componentQrl(qrl(()=>import(`./should_extract_single_qrl_with_nested_components.tsx_Foo_component_vNuTEmVFTXE.js`),`Foo_component_vNuTEmVFTXE`));

None
== DIAGNOSTICS ==

[]
