optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_ignore_null_inlined_qrl.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { inlinedQrl } from '@qwik.dev/core';

const foo = inlinedQrl(null, 'some_hash');

============================= should_ignore_null_inlined_qrl.tsx ==

import { inlinedQrl } from "@qwik.dev/core";
inlinedQrl(null, "some_hash");


None
== DIAGNOSTICS ==

[]
