optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_merge_attributes_with_spread_props_before_and_after.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export default component$((props) => {
	return <div {...props} class={[props.class, 'component']} {...props} />;
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_LUXeXe0DQrg = ()=>import("./test.tsx_test_component_LUXeXe0DQrg");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));


None
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _getConstProps, _getVarProps, _jsxSplit } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = (props)=>{
	return /*#__PURE__*/ _jsxSplit("div", {
		..._getVarProps(props),
		class: [props.class, "component"],
		..._getVarProps(props)
	}, _getConstProps(props), null, 0, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    160
  ]
}
*/
== DIAGNOSTICS ==

[]
