optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_merge_bind_checked_and_on_input.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const localValue = useSignal(false);

  return (
    <input
      onInput$={() => {
        console.log("test");
      }}
      bind:checked={localValue}
    />
  );
});

============================= should_merge_bind_checked_and_on_input.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_FieldInput_component_input_onInput = () => import("./should_merge_bind_checked_and_on_input.tsx.js");
const i_FieldInput_component_GdAxPiphLLQ = () => import("./should_merge_bind_checked_and_on_input.tsx_FieldInput_component_GdAxPiphLLQ.js");
export const FieldInput = componentQrl(qrl(i_FieldInput_component_GdAxPiphLLQ, "FieldInput_component_GdAxPiphLLQ"));


None
============================= ./should_merge_bind_checked_and_on_input.tsx_FieldInput_component_GdAxPiphLLQ.js (ENTRY POINT)==

import { _jsxSorted, qrl, useSignal } from "@qwik.dev/core";
export const FieldInput_component_GdAxPiphLLQ = () => {
	const localValue = useSignal(false);
	return /*#__PURE__*/ _jsxSorted("input", { on:input: qrl(i_FieldInput_component_input_onInput, "FieldInput_component_input_onInput") }, {
		checked: localValue,
		on:input: inlinedQrl(_chk, "_chk", [localValue])
	}, null, 3, null);
};


None
/*
{
  "origin": "should_merge_bind_checked_and_on_input.tsx",
  "name": "FieldInput_component_GdAxPiphLLQ",
  "entry": null,
  "displayName": "should_merge_bind_checked_and_on_input.tsx_FieldInput_component",
  "hash": "GdAxPiphLLQ",
  "canonicalFilename": "should_merge_bind_checked_and_on_input.tsx_FieldInput_component_GdAxPiphLLQ",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "FieldInput_component_GdAxPiphLLQ",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
