optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_merge_bind_value_and_on_input.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const localValue = useSignal("");

  return (
    <input
      onInput$={() => {
        console.log("test");
      }}
      bind:value={localValue}
    />
  );
});

============================= ./should_merge_bind_value_and_on_input.tsx_FieldInput_component_keeO5uXmPUI.js (ENTRY POINT)==

import{_jsxSorted,qrl,useSignal}from"@qwik.dev/core";export const FieldInput_component_keeO5uXmPUI=()=>{let localValue=useSignal(``);return/* @__PURE__ */ _jsxSorted(`input`,{on:input:qrl(()=>import(`./should_merge_bind_value_and_on_input.tsx.js`),`FieldInput_component_input_onInput`)},{value:localValue,on:input:inlinedQrl(_val,`_val`,[localValue])},null,3,null)};

None
/*
{
  "origin": "should_merge_bind_value_and_on_input.tsx",
  "name": "FieldInput_component_keeO5uXmPUI",
  "entry": null,
  "displayName": "should_merge_bind_value_and_on_input.tsx_FieldInput_component",
  "hash": "keeO5uXmPUI",
  "canonicalFilename": "should_merge_bind_value_and_on_input.tsx_FieldInput_component_keeO5uXmPUI",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "FieldInput_component_keeO5uXmPUI",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= should_merge_bind_value_and_on_input.tsx ==

import{componentQrl,qrl}from"@qwik.dev/core";export const FieldInput=componentQrl(qrl(()=>import(`./should_merge_bind_value_and_on_input.tsx_FieldInput_component_keeO5uXmPUI.js`),`FieldInput_component_keeO5uXmPUI`));

None
== DIAGNOSTICS ==

[]
