optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_merge_on_input_and_bind_checked.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const localValue = useSignal(false);

  return (
    <input
      bind:checked={localValue}
      onInput$={() => {
        console.log("test");
      }}
    />
  );
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_TcrbhczYDyU = ()=>import("./test.tsx_test_FieldInput_component_TcrbhczYDyU");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_TcrbhczYDyU, "test_FieldInput_component_TcrbhczYDyU"));


None
============================= test.tsx_test_FieldInput_component_TcrbhczYDyU.js (ENTRY POINT)==

import { _jsxSorted, qrl, useSignal } from "@qwik.dev/core";
const i_onInput = ()=>import("./test.tsx");
export const test_FieldInput_component_TcrbhczYDyU = ()=>{
	const localValue = useSignal(false);
	return /*#__PURE__*/ _jsxSorted("input", null, {
		checked: localValue,
		on:input: [/*#__PURE__*/ qrl(i_onInput, "FieldInput_component_input_onInput"), inlinedQrl(_chk, "_chk", [localValue])]
	}, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_FieldInput_component_TcrbhczYDyU",
  "entry": null,
  "displayName": "test_FieldInput_component",
  "hash": "TcrbhczYDyU",
  "canonicalFilename": "test.tsx_test_FieldInput_component_TcrbhczYDyU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    94,
    271
  ]
}
*/
== DIAGNOSTICS ==

[]
